[package]
authors = ["Alexander Serowy <serowy@hotmail.com>"]
edition = "2018"
name = "docker2mqtt"
version = "0.1.0"

[dependencies]
bollard = "0.10"
rumqttc = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-bunyan-formatter = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
