[package]
authors = ["Alexander Serowy <serowy@hotmail.com>"]
edition = "2018"
name = "docker2mqtt"
version = "0.1.0"

[dependencies]
bollard = "0.10"
futures = "0.3"
lazy_static = "1"
regex = "1"
rumqttc = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
sled = "0.34"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-bunyan-formatter = { version = "0.2", default-features = false }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
tokio-test = "0.4"
